# systemd-shim

./: .gitignore  Makefile.am  NEWS  configure.ac
data/: .gitignore  Makefile.am  org.freedesktop.systemd1.conf  org.freedesktop.systemd1.service.in
src/: .gitignore  Makefile.am  cgmanager.c  cgmanager.h  cgroup-release-agent.c  cgroup-unit.c  gsd-datetime-mechanism-debian.c  gsd-datetime-mechanism-debian.h  macro.h  ntp-unit.c  power-unit.c  state.c  state.h  systemd-iface.h  systemd-shim.c  unit.c  unit.h  util.c
